# serializer version: 1
# name: test_entity_state_attrs[lock.i3_rex_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.i3_rex_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lock',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lock',
    'unique_id': 'WBY00000000REXI01-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[lock.i3_rex_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'door_lock_state': 'UNLOCKED',
      'friendly_name': 'i3 (+ REX) Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.i3_rex_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unlocked',
  })
# ---
# name: test_entity_state_attrs[lock.i4_edrive40_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.i4_edrive40_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lock',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lock',
    'unique_id': 'WBA00000000DEMO02-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[lock.i4_edrive40_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'door_lock_state': 'LOCKED',
      'friendly_name': 'i4 eDrive40 Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.i4_edrive40_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_entity_state_attrs[lock.ix_xdrive50_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.ix_xdrive50_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lock',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lock',
    'unique_id': 'WBA00000000DEMO01-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[lock.ix_xdrive50_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'door_lock_state': 'LOCKED',
      'friendly_name': 'iX xDrive50 Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.ix_xdrive50_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_entity_state_attrs[lock.m340i_xdrive_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.m340i_xdrive_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Lock',
    'platform': 'bmw_connected_drive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'lock',
    'unique_id': 'WBA00000000DEMO03-lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_state_attrs[lock.m340i_xdrive_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'door_lock_state': 'LOCKED',
      'friendly_name': 'M340i xDrive Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.m340i_xdrive_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
